// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostInfo tests should PostInfo render correctly 1`] = `
<DocumentFragment>
  <div
    class="PostInfo-root-1"
  >
    <ul
      class="PostInfo-topics-2"
      data-testid="topics"
    >
      <li
        data-testid="direction"
      >
        Педіатрія
      </li>
      <li
        data-testid="direction"
      >
        Терапія
      </li>
    </ul>
    <ul
      class="PostInfo-origins-3"
      data-testid="origins"
    >
      <li
        class="PostInfo-origin-4"
        data-testid="origin"
      >
        Медитека
      </li>
      <li
        class="PostInfo-origin-4"
        data-testid="type"
      >
        Стаття
      </li>
      <li
        class="PostInfo-createdAt-5"
      >
        11:24, 10 травня 2021
      </li>
      <li
        class="PostInfo-views-6"
      >
        <span
          class="PostInfo-icon-7"
          data-testid="icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
            />
          </svg>
        </span>
        <span
          class="PostInfo-counter-8"
          data-testid="counter"
        >
          9
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PostInfo tests should Skeleton be visible 1`] = `
<DocumentFragment>
  <div
    class="PostInfo-root-49"
  >
    <ul
      class="PostInfo-topics-50"
      data-testid="topics"
    >
      <li
        data-testid="direction"
      >
        Педіатрія
      </li>
      <li
        data-testid="direction"
      >
        Терапія
      </li>
    </ul>
    <ul
      class="PostInfo-origins-51"
      data-testid="origins"
    >
      <li
        class="PostInfo-origin-52"
        data-testid="origin"
      >
        Медитека
      </li>
      <li
        class="PostInfo-origin-52"
        data-testid="type"
      >
        Стаття
      </li>
      <li
        class="PostInfo-createdAt-53"
      >
        11:24, 10 травня 2021
      </li>
      <li
        class="PostInfo-views-54"
      >
        <span
          class="PostInfo-icon-55"
          data-testid="icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
            />
          </svg>
        </span>
        <span
          class="PostInfo-counter-56"
          data-testid="counter"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
            data-testid="skeleton"
            style="width: 40px; height: 20px;"
          />
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PostInfo tests should mobile be with Views Counter 1`] = `
<DocumentFragment>
  <div
    class="PostInfo-root-41"
  >
    <ul
      class="PostInfo-topics-42"
      data-testid="topics"
    >
      <li
        data-testid="direction"
      >
        Педіатрія
      </li>
      <li
        data-testid="direction"
      >
        Терапія
      </li>
    </ul>
    <ul
      class="PostInfo-origins-43"
      data-testid="origins"
    >
      <li
        class="PostInfo-origin-44"
        data-testid="origin"
      >
        Медитека
      </li>
      <li
        class="PostInfo-origin-44"
        data-testid="type"
      >
        Стаття
      </li>
      <li
        class="PostInfo-createdAt-45"
      >
        11:24, 10 травня 2021
      </li>
      <li
        class="PostInfo-views-46"
      >
        <span
          class="PostInfo-icon-47"
          data-testid="icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
            />
          </svg>
        </span>
        <span
          class="PostInfo-counter-48"
          data-testid="counter"
        >
          9
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
